--- a/Website/index.html
+++ b/Website/index.html
@@ -16,17 +16,29 @@
 <body>
   <!-- Begin Nav-->
   <ul class="breadcrumb-counter-nav">
-    <li class="breadcrumb-counter-nav-item"><a href="#">Setup</a></li>
-    <li class="breadcrumb-counter-nav-item current"><a href="#">Sample Analysis</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="#">Sort Layout</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="#">Sort</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="#">Reporting</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="#">Reporting</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">BTECH News</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">Academics</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">About</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">Calendar</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">Parents</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">Students</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">Multi-Media</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">Virtual Backpack</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="#">Login</a></li>
   </ul>
-
   <!-- End Nav-->
 
   <!-- Begin Hero-->
+  <div class="hero-section">
+    <div class="hero-section-text">
+      <h1>Welcome Parents and Students</h1>
+      <h5>To Business Technology Early College High School</h5>
+    </div>
+  </div>
+  <!-- End Hero-->
+
+  <!-- Begin Content-->
   <br />
   <br />
 
@@ -38,70 +50,69 @@
           <img src="http://tinylichen.com/site/sites/default/files/files/images/btech_brand_lrg.jpg" alt="" class="service-icon">
         </div>
         <h4 class="service-heading"></h4>
-        <p class="service-description">It has been a very busy few months for the Project Voyager team. But the fruits of labor are finally starting to pay off. We have officially succeed at creating orbital insertions within an accuracy of 1km.</p>
+        <p class="service-description">Students attending Business Technology Early College High School (BTECH) will learn how to help the world run better using technology to solve everyday world problems. Our students will become expert readers, writers, and critical thinkers with the technical skills to be successful in our modern information-based global economy. Students have up to six years to earn a high school diploma and an associate degree—free of cost—from Queensborough Community College and hands-on job training and apprenticeship with SAP (an international enterprise software development company). Upon graduation, our students will have the knowledge, skills, career and technical education certifications, and work experience that will make our graduates much more competitive for employment and/or four-year colleges.</p>
       </div>
 
     </div>
   </div>
-  <!-- End Hero-->
-
-  <!-- Begin Content-->
-  <section class="marketing-site-three-up">
-    <h2 class="marketing-site-three-up-headline">Furry, Reliable, Cuddly</h2>
-    <div class="row medium-unstack">
-      <div class="columns">
-        <i class="fa fa-gg" aria-hidden="true"></i>
-        <h4 class="marketing-site-three-up-title">Keyless Entry</h4>
-        <p class="marketing-site-three-up-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, voluptatibus eaque natus ad eius.</p>
-      </div>
-      <div class="columns">
-        <i class="fa fa-user-o" aria-hidden="true"></i>
-        <h4 class="marketing-site-three-up-title">Invincible Igloo</h4>
-        <p class="marketing-site-three-up-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, voluptatibus eaque natus ad eius.</p>
-      </div>
-      <div class="columns">
-        <i class="fa fa-check-square-o" aria-hidden="true"></i>
-        <h4 class="marketing-site-three-up-title">Stereo System</h4>
-        <p class="marketing-site-three-up-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, voluptatibus eaque natus ad eius.</p>
-      </div>
-    </div>
-  </section>
   <!-- End Content-->
 
   <!-- Begin Footer-->
-  <section class="contact-us-section">
+  <footer class="marketing-site-footer">
     <div class="row medium-unstack">
-      <div class="columns contact-us-section-left">
-        <h1 class="contact-us-header">Get In Touch</h1>
-        <div class="responsive-embed">
-          <img src="http://maps.googleapis.com/maps/api/staticmap?center=campbell&zoom=13&scale=false&size=600x300&maptype=roadmap&sensor=false&format=png&visual_refresh=true" alt="Google Map of campbell" alt="" />
-        </div>
-
-        <ul class="contact-us-list">
-          <li class="address">100 W Rincon Ave, Campbell CA 95008</li>
-          <li class="email"><a href="mailto:">hello@yeticave.com</a></li>
-          <li class="phone">
-            1 (408) 445 9978
-          </li>
+      <div class="medium-4 columns">
+        <h4 class="marketing-site-footer-name">Business Techonology Early College <br> High School</h4>
+        <ul class="menu marketing-site-footer-menu-social simple">
+          <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+           <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+           <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
         </ul>
       </div>
-      <div class="columns contact-us-section-right">
-        <h1 class="contact-us-header">Mail Us</h1>
-        <form class="contact-us-form">
-          <input type="text" placeholder="Full name">
-          <input type="email" placeholder="Email">
-          <textarea name="message" id="" rows="12" placeholder="Type your message here"></textarea>
-          <div class="contact-us-form-actions">
-            <input type="submit" class="button" value="Send it" />
-            <div>
-              <label for="FileUpload" class="button contact-us-file-button">Attach Files</label>
-              <input type="file" id="FileUpload" class="show-for-sr">
-            </div>
+      <div class="medium-4 columns">
+         <h4 class="marketing-site-footer-title">Contact Info</h4>
+        <div class="marketing-site-footer-block">
+          <i class="fa fa-map-marker" aria-hidden="true"></i>
+          <p>Address: 230-17 Hillside Avenue <br> 3rd Floor <br>Queens Village, NY 11427</p>
+        </div>
+        <div class="marketing-site-footer-block">
+          <i class="fa fa-phone" aria-hidden="true"></i>
+          <p>Phone: 718-217-3613</p>
+        </div>
+      </div>
+      <div class="medium-4 columns">
+        <h4 class="marketing-site-footer-title">Social Media</h4>
+        <div class="row small-up-3">
+          <div class="column column-block">
+            <img src="http://placehold.it/75" alt="" />
           </div>
-        </form>
+          <div class="column column-block">
+            <img src="http://placehold.it/75" alt="" />
+          </div>
+          <div class="column column-block">
+            <img src="http://placehold.it/75" alt="" />
+          </div>
+          </div>
+        </div>
       </div>
     </div>
-  </section>
+    <div class="marketing-site-footer-bottom">
+      <div class="row large-unstack align-middle">
+        <div class="column">
+          <p>&copy; Copyright 2017 All rights reserved</p>
+        </div>
+        <div class="column">
+          <ul class="menu marketing-site-footer-bottom-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Works</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- End Footer-->
 
 
