--- a/Website/BTECH-News/index.html
+++ b/Website/BTECH-News/index.html
@@ -4,19 +4,19 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Business Technology Early College High School</title>
-  <link rel="stylesheet" href="css/foundation.css">
+  <title>BTECH News</title>
+  <link rel="stylesheet" href="../css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="../css/nav.css">
   <link rel="stylesheet" href="css/hero.css">
   <link rel="stylesheet" href="css/content.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="../css/footer.css">
 
 </head>
 <body>
   <!-- Begin Nav-->
   <ul class="breadcrumb-counter-nav">
-    <li class="breadcrumb-counter-nav-item"><a href="#">Home</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../index.html">Home</a></li>
     <li class="breadcrumb-counter-nav-item"><a href="#">BTECH News</a></li>
     <li class="breadcrumb-counter-nav-item"><a href="#">Academics</a></li>
     <li class="breadcrumb-counter-nav-item"><a href="#">About</a></li>
@@ -29,7 +29,7 @@
   </ul>
   <!-- End Nav-->
 
-  <!-- Begin Hero-->
+  <!-- Begin Content-->
   <br />
   <br />
 
@@ -41,30 +41,9 @@
           <img src="http://tinylichen.com/site/sites/default/files/files/images/btech_brand_lrg.jpg" alt="" class="service-icon">
         </div>
         <h4 class="service-heading"></h4>
-        <p class="service-description">Welcome To Business Technology <br>Early College High School <br> Website <br> In Partnership With SAP and QCC</p>
+        <p class="service-description">Students attending Business Technology Early College High School (BTECH) will learn how to help the world run better using technology to solve everyday world problems. Our students will become expert readers, writers, and critical thinkers with the technical skills to be successful in our modern information-based global economy. Students have up to six years to earn a high school diploma and an associate degree—free of cost—from Queensborough Community College and hands-on job training and apprenticeship with SAP (an international enterprise software development company). Upon graduation, our students will have the knowledge, skills, career and technical education certifications, and work experience that will make our graduates much more competitive for employment and/or four-year colleges.</p>
       </div>
 
-    </div>
-  </div>
-  <!-- End Hero-->
-
-  <!-- Begin Content-->
-  <div class="marketing-site-content-section">
-    <div class="marketing-site-content-section-img">
-      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
-    </div>
-    <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-block small-order-2 medium-order-1">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
     </div>
   </div>
   <!-- End Content-->
