--- a/Website/BTECH-News/btechnews/index.html
+++ b/Website/BTECH-News/btechnews/index.html
@@ -1,20 +1,19 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BTECH News</title>
-  <link rel="stylesheet" href="../css/foundation.css">
-  <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="../css/nav.css">
-  <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="css/content.css">
-  <link rel="stylesheet" href="../css/footer.css">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BTECH News</title>
+    <link rel="stylesheet" href="../css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="css/content.css">
+    <link rel="stylesheet" href="../css/footer.css">
 
-</head>
-<body>
-  <!-- Begin Nav-->
+  </head>
+  <body>
+  <!-- Begin Nav -->
   <ul class="breadcrumb-counter-nav">
     <li class="breadcrumb-counter-nav-item"><a href="../index.html">Home</a></li>
     <li class="breadcrumb-counter-nav-item"><a href="#">BTECH News</a></li>
@@ -27,28 +26,30 @@
     <li class="breadcrumb-counter-nav-item"><a href="#">Virtual Backpack</a></li>
     <li class="breadcrumb-counter-nav-item"><a href="#">Login</a></li>
   </ul>
-  <!-- End Nav-->
+  <!-- End Nav -->
 
-  <!-- Begin Content-->
-  <br />
-  <br />
-
-  <div class="row">
-    <div class="small-6 small-centered columns">
-
-      <div class="service">
-        <div class="service-icon-box">
-          <img src="http://tinylichen.com/site/sites/default/files/files/images/btech_brand_lrg.jpg" alt="" class="service-icon">
-        </div>
-        <h4 class="service-heading"></h4>
-        <p class="service-description">Students attending Business Technology Early College High School (BTECH) will learn how to help the world run better using technology to solve everyday world problems. Our students will become expert readers, writers, and critical thinkers with the technical skills to be successful in our modern information-based global economy. Students have up to six years to earn a high school diploma and an associate degree—free of cost—from Queensborough Community College and hands-on job training and apprenticeship with SAP (an international enterprise software development company). Upon graduation, our students will have the knowledge, skills, career and technical education certifications, and work experience that will make our graduates much more competitive for employment and/or four-year colleges.</p>
-      </div>
-
+  <!-- Begin Content -->
+  <div class="marketing-site-content-section">
+    <div class="marketing-site-content-section-img">
+      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+    </div>
+    <div class="marketing-site-content-section-block">
+      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
+      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
+      <a href="#" class="round button small">learn more</a>
+    </div>
+    <div class="marketing-site-content-section-block small-order-2 medium-order-1">
+      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
+      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
+      <a href="#" class="round button small">learn more</a>
+    </div>
+    <div class="marketing-site-content-section-img small-order-1 medium-order-2">
+      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
     </div>
   </div>
-  <!-- End Content-->
+  <!-- End Content -->
 
-  <!-- Begin Footer-->
+  <!-- Begin Footer -->
   <footer class="marketing-site-footer">
     <div class="row medium-unstack">
       <div class="medium-4 columns">
@@ -93,23 +94,27 @@
         </div>
         <div class="column">
           <ul class="menu marketing-site-footer-bottom-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="#">BTECH News</a></li>
+            <li><a href="#">Academics</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Works</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Calendar</a></li>
+            <li><a href="#">Parents</a></li>
+            <li><a href="#">Students</a></li>
+            <li><a href="#">Multi-Media</a></li>
+            <li><a href="#">Virtual Backpack</a></li>
+            <li><a href="#">Login</a></li>
           </ul>
         </div>
       </div>
     </div>
   </footer>
-  <!-- End Footer-->
+  <!-- End Footer -->
 
 
-  <script src="../js/vendor/jquery.js"></script>
-  <script src="../js/vendor/what-input.js"></script>
-  <script src="../js/vendor/foundation.js"></script>
-  <script src="../js/app.js"></script>
-</body>
+    <script src="../js/vendor/jquery.js"></script>
+    <script src="../js/vendor/what-input.js"></script>
+    <script src="../js/vendor/foundation.js"></script>
+    <script src="../js/app.js"></script>
+  </body>
 </html>
