--- a/Website/Calendar/index.html
+++ b/Website/Calendar/index.html
@@ -1,54 +1,34 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Business Technology Early College High School</title>
-  <link rel="stylesheet" href="css/foundation.css">
-  <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/nav.css">
-  <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="css/content.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendar</title>
+    <link rel="stylesheet" href="../css/foundation.css">
+    <link rel="stylesheet" href="../css/app.css">
+    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="css/content.css">
+    <link rel="stylesheet" href="../css/footer.css">
 
-</head>
-<body>
-  <!-- Begin Nav-->
+  </head>
+  <body>
+  <!-- Begin Nav -->
   <ul class="breadcrumb-counter-nav">
-    <li class="breadcrumb-counter-nav-item"><a href="#">Home</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="BTECH-News/index.html">BTECH News</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="Academics/index.html">Academics</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="About/index.html">About</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="Calendar/index.html">Calendar</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="Parents/index.html">Parents</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="Students/index.html">Students</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="Multi-Media/index.html">Multi-Media</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="Virtual-Backpack/index.html">Virtual Backpack</a></li>
-    <li class="breadcrumb-counter-nav-item"><a href="Login/index.html">Login</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../index.html">Home</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../BTECH-News/index.html">BTECH News</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../Academics/index.html">Academics</a>
+    <li class="breadcrumb-counter-nav-item"><a href="../About/index.html">About</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../Calendar/index.html">Calendar</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../Parents/index.html">Parents</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../Students/index.html">Students</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../Multi-Media/index.html">Multi-Media</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../Virtual-Backpack/index.html">Virtual Backpack</a></li>
+    <li class="breadcrumb-counter-nav-item"><a href="../Login/index.html">Login</a></li>
   </ul>
-  <!-- End Nav-->
+  <!-- End Nav -->
 
-  <!-- Begin Hero-->
-  <br />
-  <br />
-
-  <div class="row">
-    <div class="small-6 small-centered columns">
-
-      <div class="service">
-        <div class="service-icon-box">
-          <img src="http://tinylichen.com/site/sites/default/files/files/images/btech_brand_lrg.jpg" alt="" class="service-icon">
-        </div>
-        <h4 class="service-heading"></h4>
-        <p class="service-description">Welcome To Business Technology <br>Early College High School <br> Website <br> In Partnership With SAP and QCC</p>
-      </div>
-
-    </div>
-  </div>
-  <!-- End Hero-->
-
-  <!-- Begin Content-->
+  <!-- Begin Content -->
   <div class="marketing-site-content-section">
     <div class="marketing-site-content-section-img">
       <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
@@ -67,9 +47,9 @@
       <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
     </div>
   </div>
-  <!-- End Content-->
+  <!-- End Content -->
 
-  <!-- Begin Footer-->
+  <!-- Begin Footer -->
   <footer class="marketing-site-footer">
     <div class="row medium-unstack">
       <div class="medium-4 columns">
@@ -95,13 +75,13 @@
         <h4 class="marketing-site-footer-title">Social Media</h4>
         <div class="row small-up-3">
           <div class="column column-block">
-            <img src="Images\facebook-icon-preview-1-75x75.png" alt="" />
+            <img src="http://placehold.it/75" alt="" />
           </div>
           <div class="column column-block">
-            <img src="Images\d8983d94fecfb449e6c08687ea0609fb_instagram-new-vector-logo-instagram-logo-clipart-png_75x75.png" alt="" />
+            <img src="http://placehold.it/75" alt="" />
           </div>
           <div class="column column-block">
-            <img src="Images\Twitter 75x75.png" alt="" />
+            <img src="http://placehold.it/75" alt="" />
           </div>
           </div>
         </div>
@@ -115,7 +95,7 @@
         <div class="column">
           <ul class="menu marketing-site-footer-bottom-links">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="btechnews/index.html">BTECH News</a></li>
+            <li><a href="#">BTECH News</a></li>
             <li><a href="#">Academics</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Calendar</a></li>
@@ -129,12 +109,12 @@
       </div>
     </div>
   </footer>
-  <!-- End Footer-->
+  <!-- End Footer -->
 
 
-  <script src="js/vendor/jquery.js"></script>
-  <script src="js/vendor/what-input.js"></script>
-  <script src="js/vendor/foundation.js"></script>
-  <script src="js/app.js"></script>
-</body>
+    <script src="../js/vendor/jquery.js"></script>
+    <script src="../js/vendor/what-input.js"></script>
+    <script src="../js/vendor/foundation.js"></script>
+    <script src="../js/app.js"></script>
+  </body>
 </html>
