--- a/Website/About/index.html
+++ b/Website/About/index.html
@@ -31,20 +31,14 @@
   <!-- Begin Content -->
   <div class="marketing-site-content-section">
     <div class="marketing-site-content-section-img">
-      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+      <img src="http://nycptechschools.org/web/sites/default/files/schools_btech.gif" alt="" />
     </div>
     <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
+      <h3 class="marketing-site-content-section-block-header">BE INformed!</h3>
+      <p class="marketing-site-content-section-block-subheader subheader">Business Technology Early College High School (BTECH) is a new 9-14 school that opened in September 2014. The school is in partnership with SAP – an international company that specializes in business enterprise software and Queensborough Community College of the City University of New York (QCC).. Successful completion of the high school and college degree programs, earns the students opportunities for employment at SAP or in the thousands of companies around the globe who run SAP software. BTECH's mission is to combine academic excellence with technical aptitude thus empowering students to be successful in our modern, information-based global economy and community.</p>
+      <a href="https://www.youtube.com/watch?v=QBd6jz2IYXw" class="round button small">Video for you!</a>
     </div>
     <div class="marketing-site-content-section-block small-order-2 medium-order-1">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
     </div>
   </div>
   <!-- End Content -->
@@ -75,13 +69,13 @@
         <h4 class="marketing-site-footer-title">Social Media</h4>
         <div class="row small-up-3">
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\facebook-icon-preview-1-75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\d8983d94fecfb449e6c08687ea0609fb_instagram-new-vector-logo-instagram-logo-clipart-png_75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\Twitter 75x75.png" alt="" />
           </div>
           </div>
         </div>
@@ -95,15 +89,15 @@
         <div class="column">
           <ul class="menu marketing-site-footer-bottom-links">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">BTECH News</a></li>
-            <li><a href="#">Academics</a></li>
+            <li><a href="../BTECH-News/index.html">BTECH News</a></li>
+            <li><a href="../Academics/index.html">Academics</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Calendar</a></li>
-            <li><a href="#">Parents</a></li>
-            <li><a href="#">Students</a></li>
-            <li><a href="#">Multi-Media</a></li>
-            <li><a href="#">Virtual Backpack</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="../Calendar/index.html">Calendar</a></li>
+            <li><a href="../Parents/index.html">Parents</a></li>
+            <li><a href="../Students/index.html">Students</a></li>
+            <li><a href="../Multi-Media/index.html">Multi-Media</a></li>
+            <li><a href="../Virtual-Backpack/index.html">Virtual Backpack</a></li>
+            <li><a href="../Login/index.html">Login</a></li>
           </ul>
         </div>
       </div>
