--- a/Website/Parents/index.html
+++ b/Website/Parents/index.html
@@ -29,22 +29,169 @@
   <!-- End Nav -->
 
   <!-- Begin Content -->
-  <div class="marketing-site-content-section">
-    <div class="marketing-site-content-section-img">
-      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+  <div class="card-info success">
+    <div class="card-info-label">
+      <div class="card-info-label-text">
+        Meet!
+      </div>
     </div>
-    <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
+    <div class="card-info-content">
+      <h3 class="lead"> April PTA Meeting. Come Join the Fun!</h3>
+      <p>The April PTA meeting will be held on May 11, 2017 at 5:30 a.m. in the school’s library on the 2nd floor.
+          Topic: NYPD approaching and using our children as fillers for line ups
+          Speakers:
+          Commanding Officer Schiff from the 105 precinct has been invited to address the solicitation of students for NYPD purposes.
+          Darren A. Ferguson, Director of Special Programs at LaGuardia Community College.
+          We look forward to seeing you there!
+</p>
     </div>
-    <div class="marketing-site-content-section-block small-order-2 medium-order-1">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
+  </div>
+
+  <div class="card-info primary">
+    <div class="card-info-label">
+      <div class="card-info-label-text">
+        Intern
+      </div>
     </div>
-    <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+    <div class="card-info-content">
+      <h3 class="lead">Internships For You</h3>
+      <p>The Mayor’s Office Internship Program Summer 2017 application is open! The internship program provides a unique opportunity to gain experience and develop the capacity to solve New York City’s most pressing issues.
+      <br>The application deadline is April 9th. Please share this information with your network groups. <br>For questions, email interns@cityhall.nyc.gov.
+      <br>Summer Internship Program Timeline
+      <br>Application Opens – January 23, 2017
+      <br>Interviews Begin – February 27, 2017
+      <br>Application Closes – April 9, 2017
+      <br>Free "Check Out" Internet Service for NYC students via Queens Public Library  until July 5, 2017
+</p>
+<a href="http://on.nyc.gov/nycmointernship" class="round button small">Application for the Internship (Click on me!)</a>
+    </div>
+  </div>
+
+  <div class="card-info secondary">
+    <div class="card-info-label">
+      <div class="card-info-label-text">
+        Help!
+      </div>
+    </div>
+    <div class="card-info-content">
+      <h3 class="lead">All Donations are appreciated</h3>
+      <p>Please make a donation: </p>
+      <a href="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/33e042cc-25cb-40ba-878b-f643d9801db9?AWSAccessKeyId=AKIAJSZKIBPXGFLSZTYQ&Expires=1794081173&response-content-disposition=attachment%3Bfilename%3D%22PTA%2520Donation%2520Letter.docx%22&response-content-type=application%2Fvnd.openxmlformats-officedocument.wordprocessingml.document&Signature=6ZqCYyImtLTsPlxnm78xzJkPHt4%3D" class="round button small">Info on Donation</a>
+    </div>
+  </div>
+
+  <div class="card-info info">
+    <div class="card-info-label">
+      <div class="card-info-label-text">
+        Click
+      </div>
+    </div>
+    <div class="card-info-content">
+      <h3 class="lead">Link UP!</h3>
+      <p>DOE Links</p>
+      <a href="https://mystudent.nyc/" class="round button small">NYC Schools Account</a>
+      <p>School Meals</p>
+      <a href="http://www.opt-osfns.org/schoolfoodny/EatAtSchool/nutritionstandards.htm" class="round button small">NYC Schools meal application</a>
+      <p>Resources</p>
+      <a href="http://schools.nyc.gov/Offices/Health/default.htm" class="round button small">DOE Office of School Health</a>
+    </div>
+  </div>
+
+  <div class="card-info alert">
+    <div class="card-info-label">
+      <div class="card-info-label-text">
+        Stop
+      </div>
+    </div>
+    <div class="card-info-content">
+      <h3 class="lead"> Cell Phone Policy</h3>
+      <p>SCHOOL-BASED POLICY OF BUSINESS TECHNOLOGY EARLY COLLEGE HIGH SCHOOL FOR USE OF CELL PHONES, COMPUTING DEVICES, AND PORTABLE MUSIC AND ENTERTAINMENT SYSTEMS ON SCHOOL PROPERTY
+
+<br>Students are permitted to bring the following electronic items to school: <br>1) cell phones;<br> 2) laptops, tablets, iPads and other similar computing devices (“computing devices”); <br>3) portable music and entertainment systems, such as iPods, MP3 players, PSP, and Nintendo DS.
+
+<br> 1)The use of cell phones, computing devices and portable music and entertainment systems at school is subject to the conditions below.
+<br> 2)Cell phones and portable music and entertainment systems may not be turned on or used during the administration of any school quiz, test or examination.
+<br> 3)Computing devices may not be turned on or used during the administration of any school quiz, test or examination, except where such use has been explicitly authorized by the school or is contained in an Individualized Education Program or Section 504 Accommodation Plan.
+<br> 4)Cell phones, computing devices, and portable music and entertainment systems may not be turned on or used during school fire drills or other emergency preparedness exercises.
+<br> 5)Cell phones, computing devices, and portable music and entertainment systems may not be used in locker rooms or bathrooms.
+<br> 6)Students who use cell phones, computing devices, and/or portable music and entertainment systems in violation of any provision of the DOE’s Discipline Code, the school’s policy, Chancellor’s regulation A-413, and/or the DOE’s Internet Acceptable Use and Safety Policy (“IAUSP”) will be subject to discipline in accordance with the guidance interventions and disciplinary responses set forth in the Discipline Code.
+<br> 7)Cell phones may be used as set forth below (select from bullets below or select other options consistent with Regulation A-413).
+<br>During the school day:
+
+<br>1)Cell phones may not be turned on or used during instructional time, except for instructional and educational purposes with the explicit approval of the teacher.
+<br>2)Cell phones may be used during the following non-instructional times of the school day: LUNCH in the following designated areas: CAFETERIA
+<br>3)Other(describe) _____________________________________________________________.
+<br>During after-school, school-sponsored programs or activities:
+
+<br>As determined by the teacher as part of an instructional plan.
+
+<br>1)Computing devices may be used as set forth below (select from bullets below or select other options consistent with Regulation A-413).
+<br>During the school day:
+
+<br>1)Computing systems may not be turned on or used during instructional time, except for instructional and educational purposes with the explicit approval of the teacher.
+<br>2)Computing systems may be turned on and used only during instructional time for instructional and educational purposes.
+<br>3)Computing devices may be used during the following non-instructional times of the school day: LUNCH in the following designated areas: CAFETERIA
+<br>4)Other(describe) _____________________________________________________________.
+<br>During after-school, school-sponsored programs or activities:
+
+<br>Describe policy for use, considering the nature and location of such programs or activities, and the time of day they take place.
+
+<br>As determined by teacher as part of an instructional plan.
+
+<br>1)Portable music and entertainment systems may be used as set forth below (select from bullets below or select other options consistent with Regulation A-413).
+<br>During the school day:
+
+<br>Portable music and entertainment systems may not be used in areas where swimming pools are located.
+<br>Portable music devices and entertainment systems may not be turned on or used while on school property.
+<br>Portable music devices and entertainment systems may not be turned on or used during instructional time, except for instructional and educational purposes with the explicit approval of the teacher.
+<br>Portable music devices and entertainment systems may be used during
+<br>the following non-instructional times of the school day: LUNCH in the following designated areas: CAFETERIA_
+<br>Other(describe) _____________________________________________________________.
+<br>During after-school, school-sponsored activities:
+
+<br>Describe policy for use, considering the nature and location of such programs or activities, and the time of day they take place.
+
+<br>As determined by teacher as part of an instructional plan.
+
+<br>Shared space in campus schools
+<br>In campus schools, include the policy developed by the Building Council regarding the use of electronic items in shared spaces that are jointly occupied, such as the auditorium, hallways, and cafeterias.
+
+<br>Confiscation and return of electronic items
+<br>Describe the circumstances under which electronic items may be confiscated and returned. In determining whether to confiscate an electronic device, schools should consider the nature of the violation.  Where appropriate, measures should be instituted in a progressive fashion.  Such measures may include, but are not limited to:
+<br>warnings
+<br>confiscation of item and return at end of school day
+<br>confiscation of item and return following parent conference
+<br>confiscation of item and return following student entering into behavioral contract
+<br>revocation of privilege to bring item to school.
+      </p>
+    </div>
+  </div>
+
+  <div class="card-info warning">
+    <div class="card-info-label">
+      <div class="card-info-label-text">
+        Buy!
+      </div>
+    </div>
+    <div class="card-info-content">
+      <h3 class="lead">Shirts for Phys. Ed</h3>
+      <p>If you wish to purchase additional BTECH Gym Shirts, please give in a request to Ms.Ma, the school secretary. T-shirts are $8.00 for one, and $15.00 for two. Students are required to wear a BTECh Gym Shirt in PE class every time they have PE class.
+      </p>
+    </div>
+  </div>
+
+  <div class="card-info">
+    <div class="card-info-label">
+      <div class="card-info-label-text">
+        Yo!
+      </div>
+    </div>
+    <div class="card-info-content">
+      <h3 class="lead"> We Want You! </h3>
+      <p>We welcome your input. You can offer suggestions and concerns at our general meeting or email us at pta@btechpta.org.
+        <br>PTA participation is an opportunity to model the behavior we want to see in our children.
+        <br>When each of us takes a proactive role in supporting BTECH, together we help build a community of informed parents, supportive teachers and staff and successful students.</p>
+        <a href="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/81f93b01-6da8-4ae7-83c0-2458999635ac?AWSAccessKeyId=AKIAJSZKIBPXGFLSZTYQ&Expires=1805408087&response-content-disposition=%3Bfilename%3D%22BTECH%2520PTA_BYLAWS.pdf%22&response-content-type=application%2Fpdf&Signature=Z1LtSWHRb9cfcVXKRdCMIl%2FYe2k%3D" class="round button small">Our Bylaws</a>
     </div>
   </div>
   <!-- End Content -->
@@ -75,13 +222,13 @@
         <h4 class="marketing-site-footer-title">Social Media</h4>
         <div class="row small-up-3">
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\facebook-icon-preview-1-75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\d8983d94fecfb449e6c08687ea0609fb_instagram-new-vector-logo-instagram-logo-clipart-png_75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\Twitter 75x75.png" alt="" />
           </div>
           </div>
         </div>
@@ -95,15 +242,15 @@
         <div class="column">
           <ul class="menu marketing-site-footer-bottom-links">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">BTECH News</a></li>
-            <li><a href="#">Academics</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Calendar</a></li>
+            <li><a href="../BTECH-News/index.html">BTECH News</a></li>
+            <li><a href="../Academics/index.html">Academics</a></li>
+            <li><a href="../About/index.html">About</a></li>
+            <li><a href="../Calendar/index.html">Calendar</a></li>
             <li><a href="#">Parents</a></li>
-            <li><a href="#">Students</a></li>
-            <li><a href="#">Multi-Media</a></li>
-            <li><a href="#">Virtual Backpack</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="../Students/index.html">Students</a></li>
+            <li><a href="../Multi-Media/index.html">Multi-Media</a></li>
+            <li><a href="../Virtual-Backpack/index.html">Virtual Backpack</a></li>
+            <li><a href="../Login/index.html">Login</a></li>
           </ul>
         </div>
       </div>
