--- a/Website/Academics/index.html
+++ b/Website/Academics/index.html
@@ -31,20 +31,14 @@
   <!-- Begin Content -->
   <div class="marketing-site-content-section">
     <div class="marketing-site-content-section-img">
-      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+      <img src="https://cdn.andertoons.com/img/toons/cartoon2208.png" alt="" />
     </div>
     <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
+      <h3 class="marketing-site-content-section-block-header">Academic Epdiemic</h3>
+      <p class="marketing-site-content-section-block-subheader subheader">Need Help checking your Progress? You've come to the right place! With these two awesome links you will feel MOTIVATED <br> If you need help signing up, don't hesitate and contact the school!</p>
+      <a href="https://pupilpath.skedula.com/" class="round button small">Pupilpath</a>
+      <a href="https://mystudent.nyc/" class="round button small">NYC School Account</a>
     </div>
-    <div class="marketing-site-content-section-block small-order-2 medium-order-1">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
     </div>
   </div>
   <!-- End Content -->
@@ -75,13 +69,13 @@
         <h4 class="marketing-site-footer-title">Social Media</h4>
         <div class="row small-up-3">
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\facebook-icon-preview-1-75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\d8983d94fecfb449e6c08687ea0609fb_instagram-new-vector-logo-instagram-logo-clipart-png_75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\Twitter 75x75.png" alt="" />
           </div>
           </div>
         </div>
@@ -95,15 +89,15 @@
         <div class="column">
           <ul class="menu marketing-site-footer-bottom-links">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">BTECH News</a></li>
+            <li><a href="../BTECH-News/index.html">BTECH News</a></li>
             <li><a href="#">Academics</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Calendar</a></li>
-            <li><a href="#">Parents</a></li>
-            <li><a href="#">Students</a></li>
-            <li><a href="#">Multi-Media</a></li>
-            <li><a href="#">Virtual Backpack</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="../About/index.html">About</a></li>
+            <li><a href="../Calendar/index.html">Calendar</a></li>
+            <li><a href="../Parents/index.html">Parents</a></li>
+            <li><a href="../Students/index.html">Students</a></li>
+            <li><a href="../Multi-Media/index.html">Multi-Media</a></li>
+            <li><a href="../Virtual-Backpack/index.html">Virtual Backpack</a></li>
+            <li><a href="../Login/index.html">Login</a></li>
           </ul>
         </div>
       </div>
