--- a/Website/Multi-Media/index.html
+++ b/Website/Multi-Media/index.html
@@ -75,13 +75,13 @@
         <h4 class="marketing-site-footer-title">Social Media</h4>
         <div class="row small-up-3">
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\facebook-icon-preview-1-75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\d8983d94fecfb449e6c08687ea0609fb_instagram-new-vector-logo-instagram-logo-clipart-png_75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\Twitter 75x75.png" alt="" />
           </div>
           </div>
         </div>
@@ -95,15 +95,15 @@
         <div class="column">
           <ul class="menu marketing-site-footer-bottom-links">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">BTECH News</a></li>
-            <li><a href="#">Academics</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Calendar</a></li>
-            <li><a href="#">Parents</a></li>
-            <li><a href="#">Students</a></li>
+            <li><a href="../BTECH-News/index.html">BTECH News</a></li>
+            <li><a href="../Academics/index.html">Academics</a></li>
+            <li><a href="../About/index.html">About</a></li>
+            <li><a href="../Calendar/index.html">Calendar</a></li>
+            <li><a href="../Parents/index.html">Parents</a></li>
+            <li><a href="../Students/index.html">Students</a></li>
             <li><a href="#">Multi-Media</a></li>
-            <li><a href="#">Virtual Backpack</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="../Virtual-Backpack/index.html">Virtual Backpack</a></li>
+            <li><a href="../Login/index.html">Login</a></li>
           </ul>
         </div>
       </div>
