--- a/Website/Students/index.html
+++ b/Website/Students/index.html
@@ -31,20 +31,21 @@
   <!-- Begin Content -->
   <div class="marketing-site-content-section">
     <div class="marketing-site-content-section-img">
-      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+      <img src="http://media.istockphoto.com/vectors/graduation-cartoon-pack-vector-id166093999" alt="" />
     </div>
     <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
+      <h3 class="marketing-site-content-section-block-header">General Education</h3>
+      <p class="marketing-site-content-section-block-subheader subheader">Click on the link to make sure you or your child is on track for graduation.</p>
+      <a href="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/57ea88d9-54b9-4dab-b05e-7b00b1a1e327?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&Expires=1791015271&response-content-disposition=%3Bfilename%3D%22Graudation%2520Requirements.pdf%22&response-content-type=application%2Fpdf&Signature=Nj4XXJb2Jivr0WO9CLc3cRXJb9w%3D" class="round button small">Graduation Requirements</a>
+      <p class="marketing-site-content-section-block-subheader subheader">Disabled? We got you covered!</p>
+      <a href="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/1df5e70a-28af-45df-899d-1b6816d6933b?AWSAccessKeyId=AKIAIZQPKIVDQVS7TUJA&Expires=1791015271&response-content-disposition=%3Bfilename%3D%22Graduation%2520Requirements%2520for%2520Students%2520with%2520Disabilities.pdf%22&response-content-type=application%2Fpdf&Signature=AefAHQxci87EJFiNHqMydjN99Gw%3D" class="round button small">Graduation Requirements for disabled students</a>
     </div>
     <div class="marketing-site-content-section-block small-order-2 medium-order-1">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
+      <h3 class="marketing-site-content-section-block-header">Student Government</h3>
+      <p class="marketing-site-content-section-block-subheader subheader">Join the Student Governement to voice your opinions! We need YOUR voice and YOUR help to make OUR school great again!</p>
     </div>
     <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+      <img src="http://s3.amazonaws.com/kidzworld_photo/images/2012424/afee5fb2-5f4a-4d72-a593-e8233b223ab2/feature_student-council-feat.jpg" alt="" />
     </div>
   </div>
   <!-- End Content -->
@@ -75,13 +76,13 @@
         <h4 class="marketing-site-footer-title">Social Media</h4>
         <div class="row small-up-3">
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\facebook-icon-preview-1-75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\d8983d94fecfb449e6c08687ea0609fb_instagram-new-vector-logo-instagram-logo-clipart-png_75x75.png" alt="" />
           </div>
           <div class="column column-block">
-            <img src="http://placehold.it/75" alt="" />
+            <img src="Images\Twitter 75x75.png" alt="" />
           </div>
           </div>
         </div>
@@ -95,15 +96,15 @@
         <div class="column">
           <ul class="menu marketing-site-footer-bottom-links">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">BTECH News</a></li>
-            <li><a href="#">Academics</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Calendar</a></li>
-            <li><a href="#">Parents</a></li>
+            <li><a href="../BTECH-News/index.html">BTECH News</a></li>
+            <li><a href="../Academics/index.html">Academics</a></li>
+            <li><a href="../About/index.html">About</a></li>
+            <li><a href="../Calendar/index.html">Calendar</a></li>
+            <li><a href="../Parents/index.html">Parents</a></li>
             <li><a href="#">Students</a></li>
-            <li><a href="#">Multi-Media</a></li>
-            <li><a href="#">Virtual Backpack</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="../Multi-Media/index.html">Multi-Media</a></li>
+            <li><a href="../Virtual-Backpack/index.html">Virtual Backpack</a></li>
+            <li><a href="../Login/index.html">Login</a></li>
           </ul>
         </div>
       </div>
