--- a/Website/index.html
+++ b/Website/index.html
@@ -51,20 +51,16 @@
   <!-- Begin Content-->
   <div class="marketing-site-content-section">
     <div class="marketing-site-content-section-img">
-      <img src="https://images.pexels.com/photos/256046/pexels-photo-256046.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
+      <img src="https://lh3.googleusercontent.com/-_tWssvel-i8/VPXNazkjF5I/AAAAAAABFBE/pMtM3c7KM3g3YzzC4So-JtYogFnAFHkJwCHM/s540/IMG_4508.JPG" alt="" />
     </div>
     <div class="marketing-site-content-section-block">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
+      <h3 class="marketing-site-content-section-block-header">BTECH News Brief</h3>
+      <p class="marketing-site-content-section-block-subheader subheader">BTECH Regents Tutoring Schedule<br> Need Help? Stay after school and we will be sure our top-notch teachers will assist you in passing the Regents. Better grades GUARANTEED!</p>
+      <a href="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/2bb70389-0461-44d3-a013-af30a1a9dd75?AWSAccessKeyId=AKIAJSZKIBPXGFLSZTYQ&Expires=1809570805&response-content-disposition=%3Bfilename%3D%22Regents%2520tutoring%2520schedule%281%29.pdf%22&response-content-type=application%2Fpdf&Signature=xnwobZ0AlDz%2FhCWOwnt5kpD6LhQ%3D" class="round button small">learn more</a>
+      <p class="marketing-site-content-section-block-subheader subheader">New Bell Schedule<br> A new bell schedule takes effect Wednesday, April 18, 2017.</p>
+      <a href="https://echalk-slate-prod.s3.amazonaws.com/private/schools/85/resources/5664e21d-9dff-4f10-a834-fa7495563260?AWSAccessKeyId=AKIAJSZKIBPXGFLSZTYQ&Expires=1806963931&response-content-disposition=%3Bfilename%3D%22New%2520Bell%2520Schedule.pdf%22&response-content-type=application%2Fpdf&Signature=Tk22iuto%2BCcowtxMKZi8WWBkQyo%3D" class="round button small">New Bell Schedule</a>
+      <p class="marketing-site-content-section-block-subheader subheader">New BOT Academy Times<br> Starting  on Friday 4.28, BOT will run from 3:25 - 4:55, for ALL classes for the remainder of the Spring Semester.</p>
     </div>
-    <div class="marketing-site-content-section-block small-order-2 medium-order-1">
-      <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
-      <p class="marketing-site-content-section-block-subheader subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam omnis, maxime libero natus qui minus!</p>
-      <a href="#" class="round button small">learn more</a>
-    </div>
-    <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-      <img src="https://images.pexels.com/photos/300857/pexels-photo-300857.jpeg?h=350&auto=compress&cs=tinysrgb" alt="" />
     </div>
   </div>
   <!-- End Content-->
@@ -114,16 +110,16 @@
         </div>
         <div class="column">
           <ul class="menu marketing-site-footer-bottom-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="btechnews/index.html">BTECH News</a></li>
-            <li><a href="#">Academics</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Calendar</a></li>
-            <li><a href="#">Parents</a></li>
-            <li><a href="#">Students</a></li>
-            <li><a href="#">Multi-Media</a></li>
-            <li><a href="#">Virtual Backpack</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="BTECH-News/index.html">BTECH News</a></li>
+            <li><a href="Academics/index.html">Academics</a></li>
+            <li><a href="About/index.html">About</a></li>
+            <li><a href="Calendar/index.html">Calendar</a></li>
+            <li><a href="Parents/index.html">Parents</a></li>
+            <li><a href="Students/index.html">Students</a></li>
+            <li><a href="Mult-Media/index.html">Multi-Media</a></li>
+            <li><a href="Virtual-Backpack/index.html">Virtual Backpack</a></li>
+            <li><a href="Login/index.html">Login</a></li>
           </ul>
         </div>
       </div>
